fix: dark mode design fixes

--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -129,7 +129,7 @@
       align-items: center;
       justify-content: center;
       bottom: 0;
-      padding: 16px 24px;
+      padding: 16px 18px;
 
       button:not(.btn-auto) {
         width: 100%;
