--- a/src/assets/styles/helpers/_html.scss
+++ b/src/assets/styles/helpers/_html.scss
@@ -733,6 +733,7 @@ body.dark {
 	.outline {
 		outline: none;
 	}
+	
 
 	.background {
 		background-color: $dark-background;
@@ -820,6 +821,13 @@ body.dark {
 
 	.dark-text-light-blue {
 		color: $lightBlue !important;
+	}
+
+	@media (max-width: $lg) {
+		.outline {
+			outline: 1px solid #2B384B !important;
+			box-shadow: 0px 12px 32px 0px rgba(7, 45, 99, 0.06);
+		}
 	}
 
 	@media (min-width: $md) {
